--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
        <div class="container container2">
             <h3>Philosophy </h3>
             <div class="row">
-                <div class="col-4">
+                <div class="col-lg-4 col-12 text-center text-lg-left mb-5 mb-lg-0">
                     <img src="img/avatar.jpg" class="img-fluid">
                 </div>
-                <div class="col-8">
+                <div class="col-lg-8 col-12">
                     <h5>NAME</h5>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,</p>
                 </div>
-            </div>
-               <div class="row">
-                <div class="col-4">
-                    <img src="img/avatar.jpg"  class="img-fluid">
+            </div>  
+             <div class="row">
+                <div class="col-lg-4 col-12 text-center text-lg-left mb-5 mb-lg-0">
+                    <img src="img/avatar.jpg" class="img-fluid">
                 </div>
-                <div class="col-8">
+                <div class="col-lg-8 col-12">
                     <h5>NAME</h5>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,</p>
                 </div>
